--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,7 @@
   "name": "vite-react-typescript-starter",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://gsk130901.github.io/Portfolio/",
+  "homepage": "https://gsk130901.github.io/Portfolio-/",
   "type": "module",
   "scripts": {
     "dev": "vite",
